--- a/dbt_onboarding/dbt_project.yml
+++ b/dbt_onboarding/dbt_project.yml
@@ -32,5 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_onboarding:
     # Config indicated by + and applies to all files under models/example/
+    staging:
+      +materialized: view
     example:
       +materialized: view
