--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,4 +1,3 @@
-
 name: onboarding_funnel_analysis   #project name
 version: "1.0"
 profile: ga4_funnel   #must match profile name in profiles.yml
@@ -25,16 +24,16 @@ models:
       +partition_by:
         field: event_date
         data_type: date
-      +cluster_by: [event_name]
+      +cluster_by: ["event_name"]
       +tags: ["mart"]
 
-  vars:
-    start_date: "20250301"  
-    event_date: "20250430"  # only two months for now
+vars:
+  start_date: '20201101'
+  end_date: '20201231'  # only two months for now
   
   # Run-start hook
-  models_on_run_start:
-    - "SET @@query-priority = 'batch';"  # make every query "batch" priority for free slots
+  models-on-run-start:
+    - "SET @@query_priority = 'batch';"  # make every query "batch" priority for free slots
 
   # Sanity check - What did this run cost?
   on-run-end:
@@ -42,7 +41,7 @@ models:
       SELECT CONCAT(
       'Bytes billed this run:',
       FORMAT('%0.2f', SUM(total_bytes_billed) / 1e9),
-      ' GB, ',
+      ' GB'
       ) AS cost_report
       FROM UNNEST(EXTERNAL_QUERY('region-us',
         '''
@@ -50,5 +49,4 @@ models:
         FROM `region-us`.INFORMATION_SCHEMA.JOBS_BY_PROJECT
         WHERE creation_time >= TIMESTAMP_SUB(CURRENT_TIMESTAMP(), INTERVAL 1 HOUR)
           AND user_email = SESSION_USER()
-        '''
-      )
+        '''));
